JIRA:EMCPDF-696 Fix issue EMCPDF-696 scrollbar in the Add Widget window with Firefox.

--- a/dashboardscommon-ui/dashboardscommon-ui-web/public_html/emcsDependencies/dfcommon/css/widget-selector-alta.css
+++ b/dashboardscommon-ui/dashboardscommon-ui-web/public_html/emcsDependencies/dfcommon/css/widget-selector-alta.css
@@ -56,7 +56,7 @@
 
 #widget-selector-widgets {
     float: left;
-    width:840px;
+    width:848px;
     height:420px;
 }
 
